# eros

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
freertos_lib/: CMakeLists.txt
src/: eros.c  eros.h  eros_endpoint.c  eros_endpoint.h  eros_package.c  eros_package.h  eros_router.c  eros_router.h  eros_worker.c  eros_worker.h
test/: .gitignore  CMakeLists.txt  Makefile  hooks.c  main.c  primitive_test.c  pub_sub.c  server_client.c
